fix content spacing?

--- a/css/main.css
+++ b/css/main.css
@@ -186,8 +186,3 @@ footer {
 #main.show {
   opacity: 1;
 }
-
-.pageContent {
-  margin: 0% 15% 0% 15%;
-  padding: 0% 15% 0% 15%;
-}
